--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,7 @@
 /* W3 Styles */
 .w3-logo {
   padding: 2px;
-  transition: all 0.6s ease-out;
+  transition: all 0.5s ease-in-out;
 }
 .w3-logo:hover {
   transform: scale(1.1);
@@ -24,6 +24,7 @@
   background-size: cover;
   background-image: url("./images/hero.png");
   min-height: 100%;
+  height: 100%!important;
 }
 
 .w3-rounded {
@@ -42,15 +43,6 @@ h1,h2,h3,h4,h5,h6 {
     font-family: 'Montserrat', sans-serif;
 }
 
-body {
-  padding-top: 70px;
-}
-@media (max-width: 979px) {
-  body {
-    padding-top: 0px;
-  }
-}
-
 /* Self Styles */
 .self-style-primary-btn {
   border-radius: 50px;
@@ -62,21 +54,37 @@ body {
 }
 
 .btn-about:hover {
-  color: rgb(207, 126, 19);
+  color: rgb(207, 126, 19)!important;
 }
 .btn-team:hover {
-  color: rgb(255,90,90);
+  color: rgb(255,90,90)!important;
 }
 .btn-work:hover {
-  color: rgb(30, 111, 218);
+  color: rgb(30, 111, 218)!important;
 }
 .btn-pricing:hover {
-  color: rgb(54, 179, 65);
+  color: rgb(54, 179, 65)!important;
 }
 .btn-contact:hover {
-  color: rgb(150,150,150);
+  color: rgb(150,150,150)!important;
 }
 .btn-yoshi:hover {
   border: 2px solid rgb(30,30,30);
-  color: rgb(133, 109, 241);
+  color: rgb(133, 109, 241)!important;
+}
+.btn-yoshi.scrolle {
+  display: none!important;
+}
+
+/* For JS */
+.jav-navbar {
+  background: transparent!important;
+  transition: all 0.5s ease-in-out;
+}
+.jav-navbar.scrolled {
+  background: white!important;
+}
+
+.w3-btn.scrolled {
+  color: rgb(0,0,0);
 }
