--- a/resources/style.css
+++ b/resources/style.css
@@ -76,6 +76,20 @@ h1,h2,h3,h4,h5,h6 {
   display: none!important;
 }
 
+.iframe-container{
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding-bottom: 56.25%; 
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* For JS */
 .jav-navbar {
   background: transparent!important;
